--- a/backend/blockchain-file-upload/Package.json
+++ b/backend/blockchain-file-upload/Package.json
@@ -14,6 +14,7 @@
         "express": "^4.21.2",
         "express-fileupload": "^1.5.1",
         "multer": "^1.4.2",
+        "path": "^0.12.7",
         "pinata-web3": "^0.5.4",
         "web3": "^1.10.4"
     },
